# OCR

./: .gitignore  .railwayignore  auth_testing.md  backend_test.py  design_guidelines.json  railway.toml  test_gemini_ocr.py
.emergent/: emergent.yml  summary.txt
backend/: .dockerignore  .env  ocr_engine.py  payments.py  pdf_processor.py  plans.py  railway.toml  requirements.txt  server.py  webhooks.py
backend/tests/: conftest.py  test_30_critical_flows.py  test_auth_features.py  test_billing_batch_webhooks.py  test_google_oauth_profile.py  test_ocr_api.py  test_onboarding.py  test_subscription_razorpay.py
frontend/: .env  package.json  tailwind.config.js
frontend/public/: index.html  robots.txt  sitemap.xml
frontend/src/: App.js  index.css
frontend/src/components/: DashboardLayout.jsx  GlobalUpgradeModal.jsx  GoogleLoginButton.jsx  JsonLd.jsx  OnboardingFlow.jsx  PlanUpgradeModal.jsx  ProfileCompletionModal.jsx  SEO.jsx  (+1 more)
memory/: PRD.md  UX_AUDIT.md
sdks/nodejs/: README.md  index.d.ts  index.js  package.json
sdks/python/: README.md  extractai.py  pyproject.toml
test_reports/: iteration_1.json  iteration_10.json  iteration_11.json  iteration_2.json  iteration_3.json  iteration_4.json  iteration_5.json  iteration_6.json  iteration_7.json  iteration_8.json  iteration_9.json
test_reports/pytest/: pytest_30flows.xml  pytest_30flows_final.xml  pytest_google_oauth.xml  pytest_onboarding.xml  pytest_results.xml  pytest_results_auth.xml  pytest_results_iteration3.xml  pytest_results_iteration4.xml  pytest_results_iteration6.xml  pytest_subscription.xml
(+29 files in other folders)
