[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "extractai"
version = "1.0.0"
description = "ExtractAI - Simple, powerful OCR for Indian documents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ExtractAI", email = "support@extractai.in"}
]
keywords = ["ocr", "aadhaar", "pan", "document", "extraction", "kyc", "india"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
]

[project.urls]
Homepage = "https://extractai.in"
Documentation = "https://docs.extractai.in"
Repository = "https://github.com/extractai/extractai-python"

[tool.setuptools.packages.find]
where = ["."]
